github-comments/压测/K8S直接部署/api-gateway.yaml
##################################################################################################
# api-gateway
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
    service: gateway
spec:
  ports:
  - port: 10000
    name: http
  selector:
    app: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      nodeName: vm-1-14-debian
      serviceAccountName: demo-gateway
      containers:
      - name: gateway
        image: kkk2099/kkk:gateway-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10000
        resources:
          requests:
            memory: "2.5Gi"
---
