github-comments/压测/K8S直接部署/service-a.yaml
##################################################################################################
# service-a
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
    service: service-a
spec:
  ports:
  - port: 10001
    name: http
  selector:
    app: service-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v1
  labels:
    app: service-a
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
    spec:
      nodeName: vm-1-10-debian
      serviceAccountName: demo-service-a
      containers:
      - name: service-a
        image: kkk2099/kkk:service-a-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10001
        resources:
          requests:
            memory: "2.5Gi"
---
