github-comments/压测/K8S直接部署/service-b.yaml
##################################################################################################
# service-b
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: demo
  labels:
    app: service-b
    service: service-b
spec:
  ports:
  - port: 10002
    name: http
  selector:
    app: service-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1
  namespace: demo
  labels:
    app: service-b
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
    spec:
      serviceAccountName: demo-service-b
      containers:
      - name: service-b
        image: kkk2099/kkk:service-b-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v2
  namespace: demo
  labels:
    app: service-b
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v2
  template:
    metadata:
      labels:
        app: service-b
        version: v2
    spec:
      serviceAccountName: demo-service-b
      containers:
      - name: service-b
        image: kkk2099/kkk:service-b-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10002
---
