github-comments/压测/K8S直接部署/svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a-lb
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ip-01"
spec:
  type: LoadBalancer
  ports:
  - port: 10001
    targetPort: 10001
    name: http
  selector:
    app: service-a

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-lb
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ip-01"
spec:
  type: LoadBalancer
  ports:
  - port: 10000
    targetPort: 10000
    name: http
  selector:
    app: gateway
