github-comments/压测/K8S直接部署/api-gateway-istio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway
  namespace: demo
spec:
  hosts:
  - gateway
  http:
  - route:
    - destination:
        host: gateway
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gateway
  namespace: demo
spec:
  host: gateway
---
