github-comments/压测/K8S直接部署/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-demo-ingress
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: "/api"
    route:
    - destination:
        host: gateway
  - match:
    - uri:
        prefix: "/service-a"
    route:
    - destination:
        host: service-a
  - route:
    - destination:
        host: frontend-react
---
