github-comments/压测/K8S直接部署/service-a-istio.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-a
  namespace: demo
spec:
  hosts:
  - service-a
  http:
  - route:
    - destination:
        host: service-a
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: service-a
  namespace: demo
spec:
  host: service-a
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
