github-comments/压测/K8S直接部署/service-b-istio.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-b
  namespace: demo
spec:
  hosts:
  - service-b
  http:
  - match:
    - headers:
        baggage:
          regex: ".*x-api-version=v2.*"
    route:
    - destination:
        host: service-b
        subset: v2
  - route:
    - destination:
        host: service-b
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: service-b
  namespace: demo
spec:
  host: service-b
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
